feat: Add application version badge to index.html

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 </style>
 </head>
 <body>
+<div id="version-badge" style="font:12px/1.4 system-ui, sans-serif; color:#666; margin:8px 0;">
+  Version v0.0.4
+</div>
   <!-- shared topbar mount -->
   <div id="topbar-root"></div>
 
