fix: correct favicon/manifest paths for project pages; refresh head snippet; stabilize CI link check

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CIV7 Tracker</title>
 
-  <!-- Favicon / app icons (root-level files) -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon / app icons (project-page friendly: relative paths at repo root) -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- Open Graph (social share) -->
   <meta property="og:title" content="CIV7 Tracker">
@@ -18,31 +18,27 @@
   <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/">
   <meta property="og:image" content="https://sjones321.github.io/civ7-tracker/img/og-card.png">
 
-  <!-- Optional extras -->
+  <!-- Extras -->
   <meta name="theme-color" content="#001a33">
   <meta name="description" content="Track Civilization VII info at a glance.">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="css/base.css?v=1" />
 </head>
-
 <body>
-  <!-- Per-page version badge (keep during dev; remove before launch) -->
   <div id="version-badge" class="visually-muted">Version v0.0.2 (index)</div>
 
   <header class="container">
     <h1>CIV7 Tracker</h1>
     <nav aria-label="Primary">
       <a href="index.html">Home</a>
-      <!-- Add more pages later -->
     </nav>
   </header>
 
-  <main class="container" id="content">
-    <section aria-labelledby="intro-title">
-      <h2 id="intro-title">Welcome</h2>
-      <p>Clean base initialized. We’ll build features incrementally.</p>
-      <p>This page now includes favicon + Open Graph tags for better sharing.</p>
+  <main class="container">
+    <section aria-labelledby="intro">
+      <h2 id="intro">Welcome</h2>
+      <p>Clean base with correct favicon/OG wiring for GitHub Project Pages.</p>
     </section>
   </main>
 
