--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <div id="version-badge" class="visually-muted">Version v0.0.1 (404)</div>
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
