--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/base.css?v=1" />
 </head>
 <body>
-  <div id="version-badge" class="visually-muted">Version v0.0.2 (index)</div>
+  <div id="version-badge" class="visually-muted">Version v0.0.4 (index)</div>
 
   <header class="container">
     <h1>CIV7 Tracker</h1>
@@ -49,3 +49,4 @@
   <script src="js/main.js?v=1"></script>
 </body>
 </html>
+<!--test1-->
