--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Page not found — CIV7 Tracker</title>
-  <link rel="stylesheet" href="css/base.css?v=1" />
+  <link rel="stylesheet" href="css/base.css?v=1">
 </head>
 <body>
   <div class="container" style="padding:2rem 0;">
