--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CIV7 Tracker</title>
 
   <!-- Favicon / app icons (project-page friendly: relative paths at repo root) -->
@@ -23,10 +23,10 @@
   <meta name="description" content="Track Civilization VII info at a glance.">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="css/base.css?v=1" />
+  <link rel="stylesheet" href="css/base.css?v=1">
 </head>
 <body>
-  <div id="version-badge" class="visually-muted">Version v0.0.5 (index)</div>
+  <div id="version-badge" class="visually-muted">Version v0.0.2 (index)</div>
 
   <header class="container">
     <h1>CIV7 Tracker</h1>
