--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/base.css?v=1">
 </head>
 <body>
-  <div class="container" style="padding:2rem 0;">
+  <div class="container pad-y-2">
     <h1>404 — Page not found</h1>
     <p>Oops! That page doesn’t exist. Head back to the <a href="index.html">home page</a>.</p>
   </div>
