--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
-<!DOCTYPE html>
+<!-- START PACK: index.html (shared version badge) -->
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CIV7 Tracker</title>
 
-  <!-- Favicon / app icons (project-page friendly: relative paths at repo root) -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="manifest" href="site.webmanifest">
-
-  <!-- Open Graph (social share) -->
-  <meta property="og:title" content="CIV7 Tracker">
-  <meta property="og:description" content="Track Civilization VII info at a glance.">
-  <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/">
-  <meta property="og:image" content="https://sjones321.github.io/civ7-tracker/img/og-card.png">
-
-  <!-- Extras -->
-  <meta name="theme-color" content="#001a33">
-  <meta name="description" content="Track Civilization VII info at a glance.">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <link rel="stylesheet" href="css/base.css?v=1">
+  <!-- Version badge styles + loader (reads docs/site.json) -->
+  <style>
+    .version-badge {
+      display:inline-block; font:12px/1.2 system-ui,Segoe UI,Roboto,Arial;
+      border:1px solid #ccc; border-radius:6px; padding:2px 6px;
+      vertical-align:middle;
+    }
+    header { display:flex; gap:12px; align-items:center; padding:12px; }
+    main { padding: 12px; max-width: 800px; }
+    nav a { margin-right: 8px; }
+    footer { padding:12px; opacity:.8; }
+  </style>
+  <script>
+    (function(){
+      var els = document.querySelectorAll('[data-version-badge]');
+      if (!els.length) return;
+      fetch('docs/site.json', {cache:'no-store'})
+        .then(function(r){ return r.ok ? r.json() : null; })
+        .then(function(d){
+          if (!d) return;
+          els.forEach(function(el){
+            el.classList.add('version-badge');
+            el.textContent = 'v' + d.version + ' · ' + d.buildDate;
+            el.setAttribute('title', 'Version ' + d.version + ' built ' + d.buildDate);
+          });
+        })
+        .catch(function(){ /* silent */ });
+    })();
+  </script>
 </head>
 <body>
-  <div id="version-badge" class="visually-muted">Version v0.0.2 (index)</div>
-
-  <header class="container">
-    <h1>CIV7 Tracker</h1>
-    <nav aria-label="Primary">
-      <a href="index.html">Home</a>
-    </nav>
+  <header>
+    <h1 style="margin:0">CIV7 Tracker</h1>
+    <!-- Live badge replaces old "Version v0.0.2 (index)" text -->
+    <span data-version-badge></span>
   </header>
 
-  <main class="container">
-    <section aria-labelledby="intro">
-      <h2 id="intro">Welcome</h2>
-      <p>Clean base with correct favicon/OG wiring for GitHub Project Pages.</p>
-    </section>
+  <nav>
+    <a href="./">Home</a>
+  </nav>
+
+  <main>
+    <h2>Welcome</h2>
+    <p>Clean base with correct favicon/OG wiring for GitHub Project Pages.</p>
   </main>
 
-  <footer class="container">
-    <small>&copy; <span id="year"></span> CIV7 Tracker</small>
-  </footer>
-
-  <script src="js/main.js?v=1"></script>
+  <footer>© CIV7 Tracker</footer>
 </body>
 </html>
+<!-- END PACK: index.html (shared version badge) -->
