--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!-- START PACK: index.html (shared version badge, DOM-ready) -->
-<!doctype html>
+<!-- START PACK: index.html (html-validate clean) -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- BEGIN head-snippet (inlined for convenience) -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CIV7 Tracker</title>
 
   <!-- Favicon / app icons (project-page friendly: relative paths at repo root) -->
@@ -25,13 +25,19 @@
   <meta name="description" content="Track Civilization VII info at a glance.">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- START PATCH: Shared version badge (site.json-driven) -->
+  <!-- START PATCH: Shared version badge (site.json-driven, DOM-ready) -->
   <style>
     .version-badge {
       display:inline-block; font:12px/1.2 system-ui,Segoe UI,Roboto,Arial;
       border:1px solid #ccc; border-radius:6px; padding:2px 6px;
       vertical-align:middle;
     }
+    /* Moved inline styles here to satisfy no-inline-style */
+    header { display:flex; gap:12px; align-items:center; padding:12px; }
+    header h1 { margin:0; }
+    main { padding:12px; max-width: 800px; }
+    nav a { margin-right: 8px; }
+    footer { padding:12px; opacity:.8; }
   </style>
   <script>
     (function(){
@@ -65,18 +71,12 @@
       }
     })();
   </script>
-  <!-- END PATCH: Shared version badge (site.json-driven) -->
+  <!-- END PATCH: Shared version badge (site.json-driven, DOM-ready) -->
   <!-- END head-snippet -->
-  <style>
-    header { display:flex; gap:12px; align-items:center; padding:12px; }
-    main { padding:12px; max-width: 800px; }
-    nav a { margin-right: 8px; }
-    footer { padding:12px; opacity:.8; }
-  </style>
 </head>
 <body>
   <header>
-    <h1 style="margin:0">CIV7 Tracker</h1>
+    <h1>CIV7 Tracker</h1>
     <!-- Live badge placeholder -->
     <span data-version-badge></span>
   </header>
@@ -93,4 +93,4 @@
   <footer>© CIV7 Tracker</footer>
 </body>
 </html>
-<!-- END PACK: index.html (shared version badge, DOM-ready) -->
+<!-- END PACK: index.html (html-validate clean) -->
