feat: add world wonders data editor

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
   </header>
 
   <nav>
-    <a href="./">Home</a>
+    <a href="./" aria-current="page">Home</a>
+    <a href="data-wonders.html">World Wonders Editor</a>
   </nav>
 
   <main>
