feat: integrate Supabase for centralized data storage
- Replace localStorage with Supabase backend store
- Add store-supabase.js with async API methods
- Update data-wonders.html to use Supabase scripts
- Fix async/await handling in data-wonders.js
- Fix double brackets bug in bonus field icon placeholders
- Add comprehensive Supabase setup and integration docs
- Add database schema SQL for all game entities
- Add supabase-config.example.js template

Data now persists across devices and enables multi-user sharing.

--- a/data-wonders.html
+++ b/data-wonders.html
@@ -218,7 +218,12 @@
     </section>
   </main>
   <footer>© CIV7 Tracker</footer>
-  <script src="js/store.js"></script>
+  <!-- Load Supabase library first -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <!-- Load your config (with API keys) -->
+  <script src="js/supabase-config.js"></script>
+  <!-- Load the store that uses Supabase -->
+  <script src="js/store-supabase.js"></script>
   <script src="js/data-wonders.js"></script>
   <script src="js/main.js"></script>
 </body>
