--- a/data-wonders.html
+++ b/data-wonders.html
@@ -200,25 +200,25 @@
           <small>Civilization that gets +30% production bonus toward this wonder</small>
 
           <h3>Unlock Requirements</h3>
-          <label for="wonder-unlock-type">Unlock Type</label>
-          <select id="wonder-unlock-type" name="unlockType">
-            <option value="">None</option>
-            <option value="tech">Technology</option>
-            <option value="civic">Civic</option>
-          </select>
-          <small>Select whether this wonder unlocks via Technology or Civic</small>
+          <label for="wonder-unlock">Unlock (Tech/Civic)</label>
+          <input id="wonder-unlock" name="unlock" type="text" autocomplete="off" placeholder="e.g., Philosophy">
+          <small>Technology or Civic that unlocks this wonder</small>
 
-          <label for="wonder-unlock">Unlock</label>
-          <input id="wonder-unlock" name="unlock" type="text" autocomplete="off" placeholder="Start typing technology or civic name...">
-          <small>Type to filter and select from database</small>
+          <label for="wonder-unlock-icon">Unlock Icon URL</label>
+          <input id="wonder-unlock-icon" name="unlockIcon" type="text" autocomplete="off" placeholder="Paste icon URL">
+          <small>Icon for the unlock technology/civic</small>
 
           <label for="wonder-civ-specific-unlock-civ">Civ-Specific Unlock - Civilization</label>
           <input id="wonder-civ-specific-unlock-civ" name="civSpecificUnlockCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Civilization that has a unique civic unlock</small>
+          <small>Civilization that has a unique unlock for this wonder</small>
 
-          <label for="wonder-civ-specific-unlock-civic">Civ-Specific Unlock - Civic</label>
-          <input id="wonder-civ-specific-unlock-civic" name="civSpecificUnlockCivic" type="text" autocomplete="off" placeholder="Start typing civic name...">
-          <small>Civic that unlocks this wonder for the selected civilization</small>
+          <label for="wonder-civ-specific-unlock-name">Civ-Specific Unlock (Civic Name)</label>
+          <input id="wonder-civ-specific-unlock-name" name="civSpecificUnlockName" type="text" autocomplete="off" placeholder="e.g., Discipline">
+          <small>Name of the specific civic that unlocks this wonder for that civilization</small>
+
+          <label for="wonder-civ-specific-unlock-icon">Civ-Specific Unlock Icon URL</label>
+          <input id="wonder-civ-specific-unlock-icon" name="civSpecificUnlockIcon" type="text" autocomplete="off" placeholder="Paste icon URL">
+          <small>Icon for the civ-specific unlock civic</small>
 
           <h3>Placement & Effects</h3>
           <label for="wonder-placement">Placement Requirements</label>
