--- a/data-wonders.html
+++ b/data-wonders.html
@@ -182,10 +182,6 @@
           <div id="wonder-icon-preview" aria-live="polite" aria-label="Icon preview" role="img"></div>
           <small>Icon previews come from the provided URL or uploaded image. TODO: replace with global icon picker.</small>
 
-          <label for="wonder-bonus">Bonus</label>
-          <textarea id="wonder-bonus" name="bonus" placeholder="e.g., +2 food for adjacent farms"></textarea>
-          <small>Keywords like <strong>food</strong>, <strong>production</strong>, <strong>culture</strong>, and <strong>science</strong> convert to placeholders on blur.</small>
-
           <h3>Production & Associated Civilization</h3>
           <label for="wonder-production-cost">Production Cost</label>
           <input id="wonder-production-cost" name="productionCost" type="number" min="0" placeholder="450">
@@ -193,11 +189,7 @@
 
           <label for="wonder-associated-civ">Associated Civilization</label>
           <input id="wonder-associated-civ" name="associatedCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Civilization associated with this wonder</small>
-
-          <label for="wonder-civ-production-bonus">Civ Production Bonus</label>
-          <input id="wonder-civ-production-bonus" name="civProductionBonus" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Civilization that gets +30% production bonus toward this wonder</small>
+          <small>Associated civ (also gets +30% production bonus and may have specific unlock)</small>
 
           <h3>Unlock Requirements</h3>
           <label for="wonder-unlock">Research Required to Unlock</label>
@@ -206,11 +198,7 @@
 
           <label for="wonder-civ-specific-unlock-civic">Civilization Specific Unlock (Optional)</label>
           <input id="wonder-civ-specific-unlock-civic" name="civSpecificUnlockCivic" type="text" autocomplete="off" placeholder="Start typing civic name...">
-          <small>Alternative civic that unlocks this wonder for the specific civilization</small>
-
-          <label for="wonder-civ-specific-unlock-civ">Civ with Specific Unlock</label>
-          <input id="wonder-civ-specific-unlock-civ" name="civSpecificUnlockCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Which civilization can use the alternative unlock above</small>
+          <small>Alternative civic that unlocks this wonder for the associated civilization</small>
 
           <h3>Placement & Effects</h3>
           <label for="wonder-placement">Placement Requirements</label>
@@ -226,12 +214,13 @@
 
           <h3>Ownership</h3>
           <label for="wonder-owner-type">Last Owner</label>
-          <select id="wonder-owner-type" name="ownerType" required>
-            <option value="" disabled selected>Select owner</option>
+          <select id="wonder-owner-type" name="ownerType">
+            <option value="">No owner yet</option>
             <option value="Tiny">Tiny</option>
             <option value="Steve">Steve</option>
             <option value="AI">AI</option>
           </select>
+          <small>Set during gameplay - not required for initial entry</small>
 
           <label for="wonder-owner-leader">Owner Leader</label>
           <input id="wonder-owner-leader" name="ownerLeader" type="text" autocomplete="off" placeholder="Start typing leader name...">
